# LostInSpace

./: CMakeLists.txt  README.md
data/: stars.csv
include/: CameraSimulator.hpp  Config.hpp  StarCatalogue.hpp  StarMatcher.hpp  StarTrackerUI.hpp  Timer.hpp  TriangleDatabse.hpp
src/: CameraSimulator.cpp  StarCatalogue.cpp  StarMatcher.cpp  StarTrackerUI.cpp  TriangleDatabase.cpp  TriangleDatabse.cpp  main.cpp  main_save.cpp
